kube/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pdris-lab1-backend
  labels:
    app: pdris-lab1-backend
spec:
  containers:
    - image: moiseevdi/pdris-lab1-backend
      name: pdris-lab1-backend
      ports:
        - containerPort: 80
