kube/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdris-lab1-frontend-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pdris-lab1-frontend
