kube/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
        - image: moiseevdi/pdris-lab1-postgres
          name: db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: db
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - len-node
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: db
