kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdris-ingress
spec:
  rules:
  - host: mdiservices.ru
    http:
      paths:
      - backend:
          service:
            name: pdris-lab1-frontend-lb
            port:
              number: 80
        path: /
        pathType: Exact
